--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ belief-image: /images/jsib-values.jpg
 
       <div class="grid padded">
       <div class="col-2_sm-12 relative">
-        <h2 class="sm-bold vertical-form-text"> basic info </h2>
+        <h2 class="sm-bold vertical-form-text"> Get a Quote </h2>
       </div>
 
       <div class="col-10_sm-12 padded-2">
