--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ belief-image: /images/jsib-values.jpg
   <div class="grid padded-1">
     <div class="col-4_sm-12 padded">
       <i class="fas fa-people-carry"></i>
-      <h4> Why you need us </h4>
+      <h3> Why you need us </h3>
       <p>We will gladly assist you by thoroughly analysing your insurance needs, be they: </p>
         <li> Commercial and industrial assets</li>
         <li> Motor vehicles</li>
@@ -73,7 +73,7 @@ belief-image: /images/jsib-values.jpg
     </div>
     <div class="col-4_sm-12 padded">
       <i class="far fa-money-bill-alt"></i>
-      <h4> At no extra cost </h4>
+      <h3> At no extra cost </h3>
       <p>We promise to:</p>
       <li> Negotiate on your behalf for the most reasonable premium.</li>
       <li> Help you understand the fine print</li>
@@ -83,7 +83,7 @@ belief-image: /images/jsib-values.jpg
     </div>
     <div class="col-4_sm-12 padded">
       <i class="fas fa-globe-africa"></i>
-      <h4> Brokers near you </h4>
+      <h3> Brokers near you </h3>
       <p>We cover South Africa</p>
       <li> Umhlanga</li>
       <li> Kwa-Duguza/Stanger</li>
@@ -273,34 +273,77 @@ belief-image: /images/jsib-values.jpg
     <h2 class="centered padded-1"> FAQs </h2>
 
     <!-- dl stands for description list, with a description title and a description description -->
-    <dl class="accordion light-bg padded-1">
+    <dl class=" light-bg padded-1">
+      <div class="accordion1">
+        <div class="accordion">
+         <h4> Can insurance help me stay in business? </h4>
+        <div class="panel1"><p>That is exactly what a well-designed business insurance portfolio should do. Your job is to handle the expected and reasonably foreseen trade risks which can put you out of business. Your insurance broker and company are there to handle the unexpected and unforeseen risks. They do this by analysing your business operation, then recomending and advising you whether and how to reduce or insure these risks. It is a "partnership" relationship designed to protect your business.</p></div>
+        </div>
+      </div>
 
-      <dt><a href="">Can insurance help me stay in business?</a></dt>
-      <dd>That is exactly what a well-designed business insurance portfolio should do. Your job is to handle the expected and reasonably foreseen trade risks which can put you out of business. Your insurance broker and company are there to handle the unexpected and unforeseen risks. They do this by analysing your business operation, then recomending and advising you whether and how to reduce or insure these risks. It is a “partnership” relationship designed to protect your business.</dd>
+    <div class="accordion2">
+      <div class="accordion">
+        <h4> In my research I found that there are many types of insurance products. It's all very confusing. What do you advise?</h4>
+      <div class="panel2">
+        <p>That’s like asking, "How long is a piece of string?" The best thing to do would be to find an experienced and reputable insurance broker who, after analysing your requirements and risk profile, will develop an insurance portfolio to suite your unique needs.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">In my research I found that there are many types of insurance products. It's all very confusing. What do you advise?</a></dt>
-      <dd>That’s like asking, “How long is a piece of string?” The best thing to do would be to find an experienced and reputable insurance broker who, after analysing your requirements and risk profile, will develop an insurance portfolio to suite your unique needs.</dd>
+    <div class="accordion3">
+      <div class="accordion">
+        <h4> These days, I hear a lot of news about insurance issues related to the employee-employer relationship. This makes me wonder if I could be held liable for anything if I send my employees on a business errand in their own vehicles. If it's my employees car, could I have a problem?</h4>
+      <div class="panel3">
+        <p>Yes, your company could be liable for accidents that might happen because the car was being used for YOUR BUSINESS even though you don’t own it. You need to make sure that your business insurance includes "Contingent Liability" (or "Employer's Non-Owned Motor Liability Insurance") to protect the business from liability for vehicles that it uses but does NOT own. Even if you own other vehicles, and  have them insured, make sure the Contingent Liability extension has been added.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">These days, I hear a lot of news about insurance issues related to the employee-employer relationship. This makes me wonder if I could be held liable for anything if I send my employees on a business errand in their own vehicles. If it's my employees car, could I have a problem?</a></dt>
-      <dd>Yes, your company could be liable for accidents that might happen because the car was being used for YOUR BUSINESS even though you don’t own it. You need to make sure that your business insurance includes “Contingent Liability” (or “Employer’s Non-Owned Motor Liability Insurance”) to protect the business from liability for vehicles that it uses but does NOT own. Even if you own other vehicles, and  have them insured, make sure the Contingent Liability extension has been added.</dd>
+    <div class="accordion4">
+      <div class="accordion">
+         <h4> Why does the sum insured on my Homeowners policy keep going up every year?</h4>
+      <div class="panel4">
+        <p>Once the replacement cost of your residence is determined (usually at the original inception date of your policy) your insurance company updates the replacement value each year based on a building cost inflation factor. At one time it was not uncommon to see the market value of a home far exceed the cost to rebuild the home. These days it is not always so and in many cases the cost to build a home is more than the cost to buy it (including the land). While real estate values are relatively low, the cost of building materials and labour is not.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">Why does the sum insured on my Homeowners policy keep going up every year?</a></dt>
-      <dd>Once the replacement cost of your residence is determined (usually at the original inception date of your policy) your insurance company updates the replacement value each year based on a building cost inflation factor. At one time it was not uncommon to see the market value of a home far exceed the cost to rebuild the home. These days it is not always so and in many cases the cost to build a home is more than the cost to buy it (including the land). While real estate values are relatively low, the cost of building materials and labour is not.</dd>
+    <div class="accordion5">
+      <div class="accordion">
+       <h4> Who or what is F.I.A.?</h4>
+      <div class="panel5">
+        <p>This stands for "Financial Intermediaries Association", F.I.A. is striving to be a professional, influential world-class association for the long- and short-term insurance broking, financial services intermediary and consulting industry in South Africa.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">Who or what is F.I.A.?</a></dt>
-      <dd>This stands for “Financial Intermediaries Association”, F.I.A. is striving to be a professional, influential world-class association for the long- and short-term insurance broking, financial services intermediary and consulting industry in South Africa.</dd>
+    <div class="accordion6">
+      <div class="accordion">
+        <h4> Who or what is Sasria?</h4>
+      <div class="panel6">
+        <p>Initially known as the "South African Special Risks Insurance Association", it was founded in 1979 as an incorporated association not for gain to underwrite political riot insurance. Since then the scope of cover was been widened to include loss or damage due to Riot, Strike or Public Disorder (excluding Malicious Damage).  In 1998 Sasria was converted to a limited liability company with the S.A. government as sole shareholder and the name changed to Sasria SOC Ltd.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">Who or what is Sasria?</a></dt>
-      <dd>Initially known as the “South African Special Risks Insurance Association”, it was founded in 1979 as an incorporated association not for gain to underwrite political riot insurance.  Since then the scope of cover was been widened to include loss or damage due to Riot, Strike or Public Disorder (excluding Malicious Damage).  In 1998 Sasria was converted to a limited liability company with the S.A. government as sole shareholder and the name changed to Sasria SOC Ltd.</dd>
-
-      <dt><a href="">Does SASRIA cover looting?</a></dt>
-      <dd>Looting is covered in the following circumstances:
+    <div class="accordion7">
+      <div class="accordion">
+        <h4> Does SASRIA cover looting?</h4>
+      <div class="panel7">
+        <p>Looting is covered in the following circumstances:
         <p><strong>a)</strong>  Where the looting was itself the immediate objective and was achieved by means of one or more of the acts set out in the operative clause of the policy; or</p>
-        <p> <strong>b)</strong>Where the looting was an immediate, proximite, direct and foreseeable result of the very opportunity for theft and looting brought about by the state of confusion or disorder following upon the commission of one or more of the acts set out in the operative clause of the policy.</p></dd>
+        <p> <strong>b)</strong>Where the looting was an immediate, proximite, direct and foreseeable result of the very opportunity for theft and looting brought about by the state of confusion or disorder following upon the commission of one or more of the acts set out in the operative clause of the policy.</p>
+        </div>
+      </div>
+    </div>
 
-      <dt><a href="">What are the current SASRIA rates?</a></dt>
-      <dd>You will find these <a href="http://www.sasria.co.za/products/rates-schedule-calculatorhttp:/www.sasria.co.za/" target="_blank">here</a></dd>
-
-
+    <div class="accordion8">
+      <div class="accordion">
+         <h4> What are the current SASRIA rates?</h4>
+      <div class="panel8">
+        <p>You will find these <a href="http://www.sasria.co.za/products/rates-schedule-calculatorhttp:/www.sasria.co.za/" target="_blank">here</></p>
+      </div>
+      </div>
+    </div>
     </dl>
   </section>
