--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@ belief-image: /images/jsib-values.jpg
 
   <section id="reviews" class="padded mustard-bg grid-center one-time">
     <div class="grid-center">
-      <div class="col-9_sm-12-middle padded-1">
-        <hr>
+      <div class="col-4_sm-12 padded-1">
+
         <p class="company">
         All staff at JP Residences say hello and smile whenever they meet my baby. My young baby can play outside well because of safe garden, facilities, and kind staff. And also, there is a clean gym we can enjoy. The views from the rooms are very nice! We've been in Laos for 8 years and this is the best partment we've stayed in. <br>
       <span> &#9733; &#9733; &#9733; &#9733; &#9733; </span>
@@ -166,7 +166,7 @@ belief-image: /images/jsib-values.jpg
     </div>
 
       <div class="grid-center">
-        <div class="col-9_sm-12-middle  padded-1">
+        <div class="col-4_sm-12-middle padded-1">
           <hr>
           <p class="company">
             JP Residencess is a wonderful place to call home. The apartments are well designed and come with loads of modern touches. The management and staff are friendly and have quickly addressed any problems we have had (which have been minimal!). The building is incredibly well maintained and always seems immaculately clean. <br>
@@ -177,25 +177,30 @@ belief-image: /images/jsib-values.jpg
       </div>
 
         <div class="grid-center">
-          <div class="col-9_sm-12-middle padded-1">
-            <hr>
+          <div class="col-4_sm-12-middle padded-1">
+              <h3>Fire Claim</h3>
             <p class="company">
-              Spacious and cosy. Bright, quiet and well equipped. Apartment is new and clean as well. Everything you need and want in a place called home. <br>
-            <span> &#9733; &#9733; &#9733; &#9733; &#9733; </span>
-            </p>
-            <p> - Mr Sherman from Singapore, a single </p>
+              <ul style="text-align: left;">
+               	<p>Date: 23 August 2010</p>
+               	<p>Location: Grantham Place, Stanford Hill</p>
+               	<p>Insurer Offered: R1,174,000</p>
+               	<p>Final Settlement: R1,600,000</p>
+              </ul>
           </div>
         </div>
 
 
         <div class="grid-center">
-          <div class="col-9_sm-12-middle padded-1">
-            <hr>
-            <p class="company">
-             My wife and I have stayed at a few different apartments around Vientiane as we battled to find a place that meets all our needs. JP Residences has done so. The rooms are modern and well kept. There is always staff around that are able to help and attend to us if need be. The facilities are great: a well equipped fitness centre, grass area and huge undercover parking. My wife and I were very pleased to have drinking water available. Also the location is perfect, close to downtown in the heart of the expat area, but also on an extremely quiet road. Overall we have been very happy here and would recommend these apartments without hesitation. <br>
-          <span> &#9733; &#9733; &#9733; &#9733; &#9733; </span>
+          <div class="col-12-middle centered padded-1">
+            <h3>Motor Claim</h3>
+            <p class="company centered">
+              <ul>
+               	<p>Date: 21 February 2019</p>
+               	<p>Type: Accident - Write-off</p>
+               	<p>Insurer Offered: R167,400</p>
+               	<p>Final Settlement: R191,900</p>
+              </ul>
           </p>
-            <p> - Mr King, a couple</p>
           </div>
         </div>
     </section>
