--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ belief-image: /images/jsib-values.jpg
   </section>
 
   <!-- FAQ -->
-  <section class="padded">
+  <section class="padded" id="faqs">
 
     <h2 class="centered padded-1"> FAQs </h2>
 
