--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ meta-description:
 banner: /images/city1.jpg
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
+assist-image: /images/jsib-assist.jpg
 values-image: /images/plantvalues.jpg
 vision-image: /images/jsib-vision.jpg
 belief-image: /images/jsib-values.jpg
@@ -39,8 +40,8 @@ belief-image: /images/jsib-values.jpg
     <div class="col-6_sm-12 bg-image"  style="background-image: url('{{page.commercial-image}}');">
     </div>
     <div id="commercial"class="col-6_sm-12-middle padded">
-      <h3> Commercial Insurance </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <h3> Business Insurance </h3>
+      <p> Business insurance or Commercial insurance protects a business against unexpected losses suffered in the course of its normal activities. In simple terms, this would be loss or damage to company assets and liability for loss or damage caused to others. </p>
       <a class="button" href="/index#quote"> Enquire </a>
     </div>
   </div>
@@ -49,8 +50,17 @@ belief-image: /images/jsib-values.jpg
     </div>
     <div id="domestic"class="col-6_sm-12-middle padded">
       <h3> Domestic Insurance </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p> Domestic aka "Personal" Insurance protects the personal items you own, such as your car, home and personal possessions, as well as your liability for loss or damage you may cause to others, in your personal capacity. </p>
       <a class="button" href="/index#quote"> Enquire </a>
+    </div>
+    <div class="grid flex-flip">
+      <div class="col-6_sm-12 bg-image"  style="background-image: url('{{page.assist-image}}');">
+      </div>
+    <div id="assist"class="col-6_sm-12-middle padded">
+      <h3> Emergency and Commercial Assist </h3>
+      <p> With JSib Assist, you have access to emergency help 24/7 365 days a year. Our team provides clients with roadside assistance, medical assist access, home assistance, crime & security/hi-jacking assist, advanced home maintenance services, home & convenience and also pothole expert services.
+ </p>
+      <a class="button" href="/jsib-assist"> read More </a>
     </div>
   </div>
 </section>
@@ -120,7 +130,7 @@ belief-image: /images/jsib-values.jpg
     <div class="col-5_sm-12 bg-image" style="background-image: url('{{page.values-image}}');">
     </div>
     <div class="col-7_sm-12-middle padded">
-      <h3> Broker Values </h3>
+      <h3> Our Values </h3>
       <li>Respect, trust, and integrity are essential in all of our dealings. We expect honest, ethical behaviour from ourselves and others.</li>
       <li>Sound relationships with our clients and the insurance companies we represent.</li>
       <li>An entrepreneurial attitude, progressive outlook, yet prudent resource management.</li>
@@ -383,7 +393,7 @@ belief-image: /images/jsib-values.jpg
 
 
         <h3 class="sm-bold">Your Coverage </h3>
-    
+
         <div class="floating-input">
           <label for="attending"> What type of insurance do you need?</label>
           <select name="attending" id="attending" required="">
@@ -402,10 +412,10 @@ belief-image: /images/jsib-values.jpg
     <div class="col-6_sm-12">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3463.2726299037404!2d30.763463315401758!3d-29.76975732551549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6fb04ccf0f777%3A0xe180ed32554a14e7!2sJerome%20Schofield%20cc%20Insurance%20Brokers!5e0!3m2!1sen!2sla!4v1602749244795!5m2!1sen!2sla" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
-    <div class="col-6_sm-12-middle padded">
-      <h2> Our Offices are based in Hillcrest, Durban </h2>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p> <strong> Email: </strong> hello@company.com </p>
+    <div class="col-6_sm-12-middle map  padded">
+      <h2> Top Brokers in the country </h2>
+      <h3>Hillcrest, Durban, Kwazulu Natal, South Africa</h3>
+      <p> <strong> Email: </strong> ulwazi@jsib.co.za </p>
       <p> <strong> Phone: </strong> +27 (31) 765 1080  </p>
       <p> <strong> Fax: </strong> +27 (31) 7651105 </p>
     </div>
@@ -417,9 +427,9 @@ belief-image: /images/jsib-values.jpg
     <h2 class="centered padded-1"> FAQs </h2>
 
     <!-- dl stands for description list, with a description title and a description description -->
-    <dl class=" light-bg padded-1">
+    <dl class=" light-bg padded-1 plus">
       <div class="accordion1">
-        <div class="accordion">
+        <div class="accordion ">
          <h4> Can insurance help me stay in business? </h4>
         <div class="panel1"><p>That is exactly what a well-designed business insurance portfolio should do. Your job is to handle the expected and reasonably foreseen trade risks which can put you out of business. Your insurance broker and company are there to handle the unexpected and unforeseen risks. They do this by analysing your business operation, then recomending and advising you whether and how to reduce or insure these risks. It is a "partnership" relationship designed to protect your business.</p></div>
         </div>
