--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ belief-image: /images/jsib-values.jpg
 <section class="blue-bg claims">
   <section id="claims" class="padded-3 grid-center">
     <h2> Paid Claims </h2>
+    <h3> A few of the claims on which we made a difference </h3>
   </section>
   <section class="padded mustard-bg grid-center one-time">
     <div class="grid-center">
