--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ belief-image: /images/jsib-values.jpg
 
 
 <!-- paid claims -->
-<section class="blue-bg claims">
+<section class="blue-bg claims grid">
   <section id="claims" class="padded-3 grid-center">
     <h2 class="col-12"> Paid Claims </h2>
     <h4 class="col-12"> A few of the claims on which we made a difference </h4>
