--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@ values-image: /images/plantvalues.jpg
 vision-image: /images/jsib-vision.jpg
 belief-image: /images/jsib-values.jpg
 ---
-
 <!-- banner -->
 <section class="banner grid-center"  style="background-image: url('{{page.banner}}');">
-  <div class="col-6-bottom_sm-12 centered">
+  <div class="col-6-bottom_sm-12 grid-center centered">
+    <a class="desktop-hide  emergency-assist-mob col-8-centered" href="tel:+27861086800">
+      <p class="">Call for emergency assist</p>
+      <p>0861 086 800</p>
+    </a>
     <h1 class="big-bold"> Insurance Brokers in South Africa </h1>
     <h2 class="not-bold"> The Promise Kept </h2>
   </div>
@@ -25,7 +28,7 @@ belief-image: /images/jsib-values.jpg
 <section class= "blue-bg padded-3 grid-centered centered">
   <h6 class="col-10"> We believe you should only insure against those risks (generally of a catastrophic nature) you cannot reasonably afford to carry yourself. Informed decisions can only be made after assessing the potential for loss.</h6>
 </section>
-
+<a href="tel:+27317651080"><p class="desktop-hide call-button"><i class="fas fa-phone"></i></p></a>
 <!-- what we do -->
 <section id ="services" class="grid-centered padded centered">
   <div class="col-8_sm-12">
