--- a/index.html
+++ b/index.html
@@ -400,11 +400,12 @@ belief-image: /images/jsib-values.jpg
         <h3 class="sm-bold">Your Coverage </h3>
 
         <div class="floating-input">
-          <label for="attending"> What type of insurance do you need?</label>
           <select name="attending" id="attending" required="">
-            <option value="select"> select </option>
-            <option value="Commercial"> Commercial Insurance</option>
-            <option value="Domestic">Domestic Insurance</option>
+            <option>What type of insure do you need?</option>
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+          <br>
         </div>
         <input type="text" name="message" placeholder="What would you like insured?" class="input-text margin-top">
         <input type="submit" value="Send Message" class="button-solid">
