--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: JSib | Brokers in South Africa
-meta-description:
-featured-image_path:
+meta-description: Insurance Brokers in South Africa | We are an Authorised Financial Services Provider
+featured-image_path:/images/city1.jpg
 url:
-meta-description:
 banner: /images/city1.jpg
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
@@ -45,7 +44,7 @@ belief-image: /images/jsib-values.jpg
     <div id="commercial"class="col-6_sm-12-middle padded">
       <h3> Business Insurance </h3>
       <p> Business insurance or Commercial insurance protects a business against unexpected losses suffered in the course of its normal activities. In simple terms, this would be loss or damage to company assets and liability for loss or damage caused to others. </p>
-      <a class="button" href="/index#quote"> Enquire </a>
+      <a class="button" href="/#quote"> Enquire </a>
     </div>
   </div>
   <div class="grid flex-flip">
@@ -54,7 +53,7 @@ belief-image: /images/jsib-values.jpg
     <div id="domestic"class="col-6_sm-12-middle padded">
       <h3> Domestic Insurance </h3>
       <p> Domestic aka "Personal" Insurance protects the personal items you own, such as your car, home and personal possessions, as well as your liability for loss or damage you may cause to others, in your personal capacity. </p>
-      <a class="button" href="/index#quote"> Enquire </a>
+      <a class="button" href="/#quote"> Enquire </a>
     </div>
     <div class="grid flex-flip">
       <div class="col-6_sm-12 bg-image"  style="background-image: url('{{page.assist-image}}');">
@@ -401,9 +400,9 @@ belief-image: /images/jsib-values.jpg
 
         <div class="floating-input">
           <select name="attending" id="attending" required="">
-            <option>What type of insure do you need?</option>
-            <option value="Yes">Yes</option>
-            <option value="No">No</option>
+            <option>What type of insurance do you need?</option>
+            <option value="Domestic">Domestic</option>
+            <option value="Commercial">Commercial</option>
           </select>
           <br>
         </div>
