--- a/jsib-assist.html
+++ b/jsib-assist.html
@@ -1,10 +1,9 @@
 ---
 layout: default
 title: JSib | Brokers in South Africa
-meta-description:
-featured-image_path:
+meta-description: Insurance Brokers in South Africa | We are an Authorised Financial Services Provider
+featured-image_path: /images/city1.jpg
 url:
-meta-description:
 banner: /images/policy.jpg
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
