--- a/jsib-assist.html
+++ b/jsib-assist.html
@@ -3,7 +3,7 @@ layout: default
 title: JSib | Brokers in South Africa
 meta-description: Insurance Brokers in South Africa | We are an Authorised Financial Services Provider
 featured-image_path: /images/city1.jpg
-url:
+url: https://touted-coconut.cloudvent.net/
 banner: /images/policy.jpg
 commercial-image: /images/electrician.jpg
 dommestic-image: /images/jsib-domestic.jpg
