--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 title: Oops
-meta-description: Bel art, bijoux et calligraphie par Van Chang
-meta-keywords: Bel art, bijoux et calligraphie par Van Chang, artiste, française, calligraphie, van chang, boutique, bijoux, bel art unique
+meta-description: Insurance Brokers in South Africa
+meta-keywords: Insurance Brokers in South Africa, brokers, durban, kzn, hillcrest, commercial, domestic, insurance
 ---
 <section class="grid-center padded featured solid-line">
-  <h1 class="success padded-top centered col-12"> Oops!</h1>
-  <p class="sent col-6-center_sm-12 centered our-benefits"> La page à laquelle vous essayez d'accéder n'existe pas. Pas de soucis, vous pouvez simplement revenir en arrière <a href = "javascript:history.back()">ici</a>.</p>
+  <h1 class="success padded-top-sent centered col-12"> Oops!</h1>
+  <p class="sent col-6-center_sm-12 centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href = "javascript:history.back()">here</a>.</p>
 
 </section>
