--- a/success.html
+++ b/success.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 title: Success
-meta-description: Bel art, bijoux et calligraphie par Van Chang
-meta-keywords: Bel art, bijoux et calligraphie par Van Chang, artiste, française, calligraphie, van chang, boutique, bijoux, bel art unique
+meta-description: Insurance Brokers in South Africa
+meta-keywords: Insurance Brokers in South Africa, brokers, durban, kzn, hillcrest, commercial, domestic, insurance
 ---
 <section class="grid-center padded featured solid-line">
   <h1 class="success padded-top centered col-12"> succès!</h1>
-  <p class="sent col-6-center_sm-12 centered our-benefits"> Votre formulaire a été envoyé avec succès. Van sera en contact avec vous sous peu. D'ici là, explorez certains de sa  <a href="/art">travaux</a>.</p>
+  <p class="sent col-6-center_sm-12 centered our-benefits">Your form was successfully sent. Someone from our team will be in contact with you shortly. Until then, feel free to continue exploring our  <a href="/">site</a>.</p>
 
 </section>
