--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ belief_image: /images/jsib-values.jpg
 
 <!-- our story -->
 <section id="story" class="padded-sides">
-  <h2 class="centered"> Our Story </h2>
+  <h2 class="centered editable"> Our Story </h2>
   <div class="left"
   <p class="fadein editable">Many years ago, or to be more precise, in the 1940s, John Schofield discovered that there was a cycle of tragedy occurring that would cause major setbacks in businesses, and quite simply he didn’t enjoy seeing individuals suffering as greatly as they were especially after paying a monthly premium. He realised that by launching himself as a specialised independent insurance broker, he could deliver a service that would change the outcome of a catastrophe.</p>
   <p class="fadein editable">For 30 years he worked as a specialised insurance broker in Durban. He worked for various insurance broker companies until he gained the knowledge and experience needed in order to establish his own brokerage.</p>
@@ -134,7 +134,7 @@ belief_image: /images/jsib-values.jpg
     <div class="col-5_sm-12 bg-image" style="background-image: url('{{page.values_image}}');">
     </div>
     <div class="col-7_sm-12-middle padded">
-      <h3> Our Values </h3>
+      <h3 class="editable"> Our Values </h3>
       <li class="editable">Respect, trust, and integrity are essential in all of our dealings. We expect honest, ethical behaviour from ourselves and others.</li>
       <li class="editable">Sound relationships with our clients and the insurance companies we represent.</li>
       <li class="editable">An entrepreneurial attitude, progressive outlook, yet prudent resource management.</li>
@@ -171,7 +171,7 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Motor Claim</h3>
-        <p class="company centered editable">
+        <p class="company centered">
           <ul>
             <p>Date: 13 June 2019</p>
             <p>Type: Hijack</p>
@@ -184,8 +184,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Motor Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 21 February 2019</p>
             <p>Type: Accident - Write-off</p>
             <p>Insurer Offered: R167,400</p>
@@ -197,8 +197,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Storm Claim - Buildings Damage</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 6 May 2016</p>
             <p>Location: Ingcuce Road, Durban</p>
             <p>Insurer Offered: R Nil</p>
@@ -210,8 +210,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">All Risks - Theft from Car</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 9 September 2015</p>
             <p>Location: Westville, Durban</p>
             <p>Insurer Offered: R5,000</p>
@@ -223,8 +223,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Fire Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 15 May 2015</p>
             <p>Location: Kwa-Duguza, KZN</p>
             <p>Insurer Offered: R Nil</p>
@@ -236,8 +236,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Power Surge Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 14 April 2015</p>
             <p>Location: Hillcrest, Durban</p>
             <p>Insurer Offered: R5,000</p>
@@ -249,8 +249,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Storm Claim - Buildings Damage</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 16 October 2014</p>
             <p>Location: Campbell Road, Howick</p>
             <p>Insurer Offered: R49,922</p>
@@ -262,8 +262,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Money Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 4 August 2014</p>
             <p>Location: Mandeni Bus Rank</p>
             <p>Insurer Offered: R24,000</p>
@@ -275,8 +275,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Goods In Transit Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 6 May 2014</p>
             <p>Location: Accident on N1 near Parys</p>
             <p>Insurer Offered: R77,500</p>
@@ -288,8 +288,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Fire Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 1 December 2013</p>
             <p>Location: Bauhinia Street, Stanger</p>
             <p>Insurer Offered: R10,746</p>
@@ -301,8 +301,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Storm Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 26 October 2013</p>
             <p>Location: Westmead, Pinetown</p>
             <p>Insurer Offered: R374,866</p>
@@ -314,8 +314,8 @@ belief_image: /images/jsib-values.jpg
     <div class="grid-center">
       <div class="col-12-middle centered padded-1">
         <h3 class="editable">Motor Claim</h3>
-        <p class="company centered editable">
-          <ul>
+        <p class="company centered">
+          <ul class="editable">
             <p>Date: 28 July 2013</p>
             <p>Type: Accident - Recovery</p>
             <p>Insurer Offered: R213,611</p>
@@ -327,8 +327,8 @@ belief_image: /images/jsib-values.jpg
       <div class="grid-center">
         <div class="col-12-middle centered padded-1">
           <h3 class="editable">Motor Claim</h3>
-          <p class="company centered editable">
-            <ul>
+          <p class="company centered">
+            <ul class="editable">
               <p>Date: 28 July 2013</p>
               <p>Type: Accident - Write-off</p>
               <p>Insurer Offered: R150,000</p>
@@ -340,8 +340,8 @@ belief_image: /images/jsib-values.jpg
         <div class="grid-center">
           <div class="col-12-middle centered padded-1">
             <h3 class="editable">Theft Claim</h3>
-            <p class="company centered editable">
-              <ul>
+            <p class="company centered">
+              <ul class="editable">
                	<p>Date: 27 July 2012</p>
                	<p>Location: Detroit Street, Havenside</p>
                	<p>Insurer Offered: R3,350</p>
@@ -353,8 +353,8 @@ belief_image: /images/jsib-values.jpg
         <div class="grid-center">
           <div class="col-12-middle centered padded-1">
             <h3 class="editable">Fire Claim</h3>
-            <p class="company centered editable">
-              <ul>
+            <p class="company centered">
+              <ul class="editable">
                 <p>Date: 23 August 2010</p>
                 <p>Location: Grantham Place, Stanford Hill</p>
                 <p>Insurer Offered: R1,174,000</p>
