--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ belief_image: /images/jsib-values.jpg
 <!-- our story -->
 <section id="story" class="padded-sides">
   <h2 class="centered editable"> Our Story </h2>
-  <div class="left"
+  <div class="left">
   <p class="fadein editable">Many years ago, or to be more precise, in the 1940s, John Schofield discovered that there was a cycle of tragedy occurring that would cause major setbacks in businesses, and quite simply he didn’t enjoy seeing individuals suffering as greatly as they were especially after paying a monthly premium. He realised that by launching himself as a specialised independent insurance broker, he could deliver a service that would change the outcome of a catastrophe.</p>
   <p class="fadein editable">For 30 years he worked as a specialised insurance broker in Durban. He worked for various insurance broker companies until he gained the knowledge and experience needed in order to establish his own brokerage.</p>
   <p class="fadein editable">In 1974, with the encouragement from his clients, John took the risk and established John Schofield (Pty) Ltd. The small brokerage took off first handling commercial and industrial insurance, but soon expanded into other specialised insurance fields.</p>
