--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ belief_image: /images/jsib-values.jpg
 </section>
 <a href="tel:+27317651080"><p class="desktop-hide call-button"><i class="fas fa-phone"></i></p></a>
 <!-- what we do -->
-<section id ="services" class="grid-centered padded centered">
+<section id ="services" class="padded-top">
+</section>
+<section class="grid-centered padded-sides padded-bottom centered">
   <div class="col-8_sm-12">
     <h3 class="editable"> Services </h3>
     <p class="editable">We are specialised short-term insurance brokers who offer real assistance in the event of a claim – especially large ones. Simply stated, we make sure you get settled in full as promised in the policy. In other words, you'll get the best and highest possible payout when making a claim without having to appoint your own Specialist Loss Assessor.</p>
@@ -69,9 +71,9 @@ belief_image: /images/jsib-values.jpg
 </section>
 
 <!-- sales pitch -->
-<section class="centered icons">
+<section class="centered icons padded-top-reg">
   <div class="grid padded-1">
-    <div class="col-4_sm-12 padded">
+    <div class="col-4_sm-12 padded-sides">
       <i class="fas fa-people-carry"></i>
       <h3 class="editable"> Why you need us </h3>
       <p class="editable">We will gladly assist you by thoroughly analysing your insurance needs, be they: </p>
@@ -84,7 +86,7 @@ belief_image: /images/jsib-values.jpg
         <li class="editable"> Kidnap and Ransom</li>
         <li class="editable"> Niche products (eg. jewellers, game farms and restaurants)</li>
     </div>
-    <div class="col-4_sm-12 padded">
+    <div class="col-4_sm-12 padded-sides">
       <i class="far fa-money-bill-alt"></i>
       <h3 class="editable"> At no extra cost </h3>
       <p class="editable"> We promise to:</p>
@@ -94,7 +96,7 @@ belief_image: /images/jsib-values.jpg
       <li class="editable"> Assist you with compiling your claim.</li>
       <li class="editable"> Ensure you get the full amount due to you in terms of the policy.</li>
     </div>
-    <div class="col-4_sm-12 padded">
+    <div class="col-4_sm-12 padded-sides">
       <i class="fas fa-globe-africa"></i>
       <h3 class="editable"> Brokers near you </h3>
       <p class="editable">We cover South Africa</p>
@@ -112,7 +114,9 @@ belief_image: /images/jsib-values.jpg
 </section>
 
 <!-- our story -->
-<section id="story" class="padded-sides">
+<section id ="story" class="padded-top light-bg">
+</section>
+<section class="padded-sides padded-bottom light-bg">
   <h2 class="centered editable"> Our Story </h2>
   <div class="left">
   <p class="fadein editable">Many years ago, or to be more precise, in the 1940s, John Schofield discovered that there was a cycle of tragedy occurring that would cause major setbacks in businesses, and quite simply he didn’t enjoy seeing individuals suffering as greatly as they were especially after paying a monthly premium. He realised that by launching himself as a specialised independent insurance broker, he could deliver a service that would change the outcome of a catastrophe.</p>
@@ -129,7 +133,7 @@ belief_image: /images/jsib-values.jpg
 </section>
 
 <!-- values and vision -->
-<section class="padded">
+<section class="padded-top-reg padded-sides">
   <div class="grid padded slideinleft flex-flip">
     <div class="col-5_sm-12 bg-image" style="background-image: url('{{page.values_image}}');">
     </div>
@@ -160,10 +164,11 @@ belief_image: /images/jsib-values.jpg
   </div>
 </section>
 
+<section id ="claims" class="padded-top"></section>
 
 <!-- paid claims -->
 <section class="blue-bg claims">
-  <section id="claims" class="padded-3 grid-center centered">
+  <section class="padded-3 grid-center centered">
     <h2 class="col-12 editable"> Paid Claims </h2>
     <h4 class="col-12 padded-sides editable"> A few of the claims on which we made a difference </h4>
   </section>
@@ -370,11 +375,12 @@ belief_image: /images/jsib-values.jpg
 
 <!-- get a quote -->
 <section>
-  <section id="quote" class="padded-10 ">
+  <section id ="quote" class="padded-top"></section>
+  <section class="padded-10 ">
 
     <form method="post" action="/success.html" class="enquiry capped-width">
 
-      <div class="grid-center padded">
+      <div class="grid-center">
       <div class="col-12 centered">
         <h2 class="sm-bold editable"> Get a Quote </h2>
       </div>
