--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ title: Oops
 meta-description: Insurance Brokers in South Africa
 meta-keywords: Insurance Brokers in South Africa, brokers, durban, kzn, hillcrest, commercial, domestic, insurance
 ---
+<section id ="story" class="padded-top"></section>
 <section class="grid-center padded featured solid-line">
   <h1 class="success padded-top-sent centered col-12"> Oops!</h1>
   <p class="sent col-6-center_sm-12 centered "> It seems as though you're trying to access a page that doesn't exist. No worries, you can simple go back <a href = "javascript:history.back()">here</a>.</p>
