--- a/success.html
+++ b/success.html
@@ -4,6 +4,7 @@ title: Success
 meta-description: Insurance Brokers in South Africa
 meta-keywords: Insurance Brokers in South Africa, brokers, durban, kzn, hillcrest, commercial, domestic, insurance
 ---
+<section id ="story" class="padded-top"></section>
 <section class="grid-center padded featured solid-line">
   <h1 class="success padded-top centered col-12"> success!</h1>
   <p class="sent col-6-center_sm-12 centered our-benefits">Your form was successfully sent. Someone from our team will be in contact with you shortly. Until then, feel free to continue exploring our <a href="/">site</a>.</p>
